XSS errors displayed to the view

--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -22,6 +22,7 @@ section#timeline table tbody#tweetsList tr.alignVerticalContentOfAHtmlTweetLine 
 
 .error{
 	color:red;
+	font-weight:bold;
 }
 
 section#followline ul#usersSuggestions{
