--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -23,6 +23,7 @@
 						  placeholder="Type a new tweet..."></textarea>
 				<button type="submit" class="btn btn-primary">Tweet!</button>
 			</form>
+			<div class="error"></div>
 		</div>
 	</div>
 </div>
