--- a/src/main/webapp/assets/fragments/updateProfile.html
+++ b/src/main/webapp/assets/fragments/updateProfile.html
@@ -1,19 +1,23 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span3">
-        <form id="updateUserForm" onsubmit="return updateProfile();">
-            <label>Email :</label> <input id="emailInput" name="email" type="email" required="required"
-                                          placeholder="Enter e-mail..." class="input-xlarge"/>
-            <fieldset>
-                <label>First name :</label> <input id="firstNameInput" name="firstName" type="text"
-                                                   placeholder="Enter first name..." class="input-xlarge"/>
-                <label>Last name :</label> <input id="lastNameInput" name="lastName" type="text"
-                                                  placeholder="Enter last name..." class="input-xlarge"/>
-            </fieldset>
+            <form id="updateUserForm" onsubmit="return updateProfile();">
+                <label>Email :</label> <input id="emailInput" name="email" type="email" required="required"
+                                              size="20" maxlength="60"
+                                              placeholder="Enter e-mail..." class="input-xlarge"/>
+                <fieldset>
+                    <label>First name :</label> <input id="firstNameInput" name="firstName" type="text"
+                                                       required="required"
+                                                       size="20" maxlength="40"
+                                                       placeholder="Enter first name..." class="input-xlarge"/>
+                    <label>Last name :</label> <input id="lastNameInput" name="lastName" type="text" required="required"
+                                                      size="20" maxlength="40"
+                                                      placeholder="Enter last name..." class="input-xlarge"/>
+                </fieldset>
 
-            <button type="submit" class="btn btn-primary">Update</button>
-        </form>
-        <div class="error"></div>
-            </div>
+                <button type="submit" class="btn btn-primary">Update</button>
+            </form>
+            <div class="error"></div>
+        </div>
     </div>
 </div>
